@@ -1,0 +1,8 @@
+-- Create METRO_AREA table
+CREATE TABLE metro_area (
+	id SMALLINT UNSIGNED NOT NULL PRIMARY KEY AUTO_INCREMENT,
+	name VARCHAR(100) NOT NULL UNIQUE,
+	state_id TINYINT UNSIGNED NOT NULL,
+
+	FOREIGN KEY (state_id) REFERENCES state (id)
+);
