@@ -93,3 +93,4 @@
 /ej_data_field/create.sql
 /ej_data_value/create.sql
 /county_deaths/create.sql
+/metro_area/create.sql
